<!--
  ~ MaxiCP is under MIT License
  ~ Copyright (c)  2023 UCLouvain
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.maxicp</groupId>
    <artifactId>maxicp</artifactId>
    <packaging>jar</packaging>
    <version>0.0.1</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>MaxiCP: A Constraint Programming Solver for Scheduling and Vehicle Routing</description>
    <url>https://pschaus.github.io/maxicp/</url>
    <organization>
        <name>Pierre Schaus, Guillaume Derval, Augustin Delecluse, Laurent Michel, Pascal Van Hentenryck</name>
        <url>https://github.com/aia-uclouvain/maxicp</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Pierre Schaus (pschaus)</name>
            <email>pierre.schaus@uclouvain.be</email>
            <organization>UCLouvain / ICTEAM / INGI</organization>
            <organizationUrl></organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <checkstyle.config.location>${basedir}/checkstyle.xml</checkstyle.config.location>
        <junit.jupiter.version>5.9.1</junit.jupiter.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>org.xcsp</groupId>
            <artifactId>xcsp3-tools</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.xaviergillard</groupId>
            <artifactId>SolverCheck</artifactId>
            <version>1.0.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <exclude>**/examples/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <skipTests>false</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <reportOutputDirectory>${project.reporting.outputDirectory}</reportOutputDirectory>
                    <destDir>javadoc</destDir>
                    <source>${maven.compiler.source}</source>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                        <additionalOption>-quiet</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>